--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
   <script
     crossorigin
     src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script
     crossorigin
     src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script></script>
+  <script>
+    const root = document.getElementById('root');
+    const span = React.createElement(
+      'span',
+      { id: 'sexy-span', style: { color: 'red' } },
+      'Total clicks: 0'
+    );
+    ReactDOM.render(span, root);
+  </script>
 </html>
