--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById('root');
-    const H3 = (
-      <h3
-        id="title"
-        onMouseEnter={() => {
-          console.log('Mouse enter');
-        }}>
-        I'm a title
-      </h3>
+    // const H3 = () => (
+    //   <h3
+    //     id="title"
+    //     onMouseEnter={() => {
+    //       console.log('Mouse enter');
+    //     }}>
+    //     I'm a title
+    //   </h3>
+    // );
+    // const Button = () => (
+    //   <button
+    //     style={{ backgroundColor: 'tomato' }}
+    //     onClick={() => console.log("I'm Clicked")}>
+    //     Click me
+    //   </button>
+    // );
+    const Container = () => (
+      <div>
+        <h3>Total clicks: 0</h3>
+        <button>Click me</button>
+      </div>
     );
-    const Button = (
-      <button
-        style={{ backgroundColor: 'tomato' }}
-        onClick={() => console.log("I'm Clicked")}>
-        Click me
-      </button>
-    );
-    const container = React.createElement('div', null, [H3, Button]);
-    ReactDOM.render(container, root);
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
