--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       const onClick = () => {
         setCounter(counter + 1);
       };
+      console.log('rendered');
+      console.log(counter);
       return (
         <div>
           <h3>Total clicks: {counter}</h3>
