--- a/index.html
+++ b/index.html
@@ -13,17 +13,37 @@
   <script type="text/babel">
     const root = document.getElementById('root');
     const App = () => {
-      const [counter, setCounter] = React.useState(0);
-      const onClick = () => {
-        // setCounter(counter + 1);
-        setCounter((current) => current + 1);
+      const [minutes, setMinutes] = React.useState();
+      const [hours, setHours] = React.useState();
+      const onChange = (event) => {
+        setMinutes(event.target.value);
+        // console.log(event.target.id);
+        // event.target.id === 'minutes'
+        //   ? setHours((event.target.value / 60).toFixed(2))
+        //   : setMinutes(event.target.value * 60);
+        // setHours(minutes / 60);
+        // setMinutes( * 60);
       };
-      console.log('rendered');
-      console.log(counter);
       return (
         <div>
-          <h3>Total clicks: {counter}</h3>
-          <button onClick={onClick}>Click me</button>
+          <h1 className="hi">Super Converter</h1>
+          <label htmlFor="minutes">Minutes</label>
+          <input
+            value={minutes}
+            id="minutes"
+            placeholder="Minutes"
+            type="number"
+            onChange={onChange}
+          />
+          <h4>You want to convert {minutes}</h4>
+          <label htmlFor="hours">Hours</label>
+          <input
+            value={hours}
+            id="hours"
+            placeholder="Hours"
+            type="number"
+            onChange={onChange}
+          />
         </div>
       );
     };
