#3.6 State Practice part One

--- a/index.html
+++ b/index.html
@@ -13,37 +13,46 @@
   <script type="text/babel">
     const root = document.getElementById('root');
     const App = () => {
-      const [minutes, setMinutes] = React.useState();
-      const [hours, setHours] = React.useState();
-      const onChange = (event) => {
+      const [minutes, setMinutes] = React.useState(0);
+      const [hours, setHours] = React.useState(0);
+      const onChangeMin = (event) => {
+        console.log(event.target.value);
         setMinutes(event.target.value);
-        // console.log(event.target.id);
-        // event.target.id === 'minutes'
-        //   ? setHours((event.target.value / 60).toFixed(2))
-        //   : setMinutes(event.target.value * 60);
-        // setHours(minutes / 60);
-        // setMinutes( * 60);
+        setHours((event.target.value / 60).toFixed(2));
+      };
+      const onChangeHr = (event) => {
+        console.log(event.target.value);
+        setHours(event.target.value);
+        setMinutes(event.target.value * 60);
+      };
+      const reset = () => {
+        setMinutes(0);
+        setHours(0);
       };
       return (
         <div>
           <h1 className="hi">Super Converter</h1>
-          <label htmlFor="minutes">Minutes</label>
-          <input
-            value={minutes}
-            id="minutes"
-            placeholder="Minutes"
-            type="number"
-            onChange={onChange}
-          />
-          <h4>You want to convert {minutes}</h4>
-          <label htmlFor="hours">Hours</label>
-          <input
-            value={hours}
-            id="hours"
-            placeholder="Hours"
-            type="number"
-            onChange={onChange}
-          />
+          <div>
+            <label htmlFor="minutes">Minutes</label>
+            <input
+              value={minutes}
+              id="minutes"
+              placeholder="Minutes"
+              type="number"
+              onChange={onChangeMin}
+            />
+          </div>
+          <div>
+            <label htmlFor="hours">Hours</label>
+            <input
+              value={hours}
+              id="hours"
+              placeholder="Hours"
+              type="number"
+              onChange={onChangeHr}
+            />
+          </div>
+          <button onClick={reset}>Reset</button>
         </div>
       );
     };
