--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     const App = () => {
       const [minutes, setMinutes] = React.useState(0);
       const [hours, setHours] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
       const onChangeMin = (event) => {
         console.log(event.target.value);
         setMinutes(event.target.value);
@@ -29,6 +30,11 @@
         setMinutes(0);
         setHours(0);
       };
+
+      const onFlip = () => {
+        setFlipped((prev) => !prev);
+      };
+
       return (
         <div>
           <h1 className="hi">Super Converter</h1>
@@ -40,6 +46,8 @@
               placeholder="Minutes"
               type="number"
               onChange={onChangeMin}
+              // disabled={flipped === true}
+              disabled={flipped}
             />
           </div>
           <div>
@@ -50,9 +58,12 @@
               placeholder="Hours"
               type="number"
               onChange={onChangeHr}
+              // disabled={flipped === false}
+              disabled={!flipped}
             />
           </div>
           <button onClick={reset}>Reset</button>
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     };
